// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default 1`] = `
<span
  class="__inline-block_jnii2f_jnii2f __w-64_jnii2f_jnii2f s-Si-t0uQp-0iu"
>
  <span
    class=" s-t-4K-QPPrmFY"
  >
     
    <input
      class="s-t-4K-QPPrmFY"
      placeholder=""
      type="text"
    />
  </span>
  <!--&lt;TextInput&gt;-->
</span>
`;

exports[`With icon and placeholder 1`] = `
<span
  class="__inline-block_jnii2f_jnii2f __w-64_jnii2f_jnii2f s-Si-t0uQp-0iu"
>
  <span
    class="s-t-4K-QPPrmFY icon"
  >
    <button
      class="icons i-mdi-magnify s-t-4K-QPPrmFY"
    />
     
    <input
      class="s-t-4K-QPPrmFY"
      placeholder="search..."
      type="search"
    />
  </span>
  <!--&lt;TextInput&gt;-->
</span>
`;

exports[`With value 1`] = `
<span
  class="__inline-block_jnii2f_jnii2f __w-64_jnii2f_jnii2f s-Si-t0uQp-0iu"
>
  <span
    class="s-t-4K-QPPrmFY icon"
  >
    <button
      class="icons i-mdi-account s-t-4K-QPPrmFY"
    />
     
    <input
      class="s-t-4K-QPPrmFY"
      placeholder=""
      type="text"
    />
  </span>
  <!--&lt;TextInput&gt;-->
</span>
`;
